fixed spacing of keypad following bugs after including bootstrap cdn

--- a/app/src/Components/LandingPage/AdminModal/AdminModal.css
+++ b/app/src/Components/LandingPage/AdminModal/AdminModal.css
@@ -38,13 +38,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
 }
 
 .keypadRow {
     height: 100px;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     margin: 0;
     padding: 0;
 }
@@ -69,6 +69,9 @@
 }
 
 .closeModalBtn {
+    position: absolute;
+    right: 40px;
+    bottom: 30px;
     width: 40px;
     height: 40px;
     background-color: #F27424;
